2.0:
api: new simplified API for all-in-one conversions
api: remove zimg_set_cpu
api: add zimg_get_version_info and zimg_get_api_version
depth: clamp integer output to bit depth limit (e.g. 10-bit => 0-1023)
resize: clamp integer output to bit depth limit
vszimg: new resize.X compatible syntax

1.1.1:
fix border handling in SSE2 horizontal resize

1.1:
cache-efficient 2d resizer
rewrite horizontal resize kernels
fix incorrect strength of ordered dither
fix inaccurate error diffusion dither
fix integer underflow in SSE2 dither

1.0:
initial release