@@ -4,6 +4,7 @@ api: remove zimg_set_cpu
 api: add zimg_get_version_info and zimg_get_api_version
 depth: clamp integer output to bit depth limit (e.g. 10-bit => 0-1023)
 resize: clamp integer output to bit depth limit
+resize: fix incorrect output for point filter
 vszimg: new resize.X compatible syntax
 
 1.1.1:
